# Qt

lab01/: README.md
lab01/GalleryApp/: CMakeLists.txt  Main.qml  MainWindow.qml  SplashWindow.qml  main.cpp  resources.qrc
lab02/: README.md
lab02/Calculator/: CMakeLists.txt
lab03-weatherApp/: CMakeLists.txt  README.md  main.cpp
