cmake_minimum_required(VERSION 3.16)

project(Gallery VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTORCC ON)

find_package(Qt6 REQUIRED COMPONENTS Quick)

qt_standard_project_setup(REQUIRES 6.5)

qt_add_executable(appGallery
    main.cpp
)

qt_add_qml_module(appGallery
    URI Gallery
    QML_FILES
        Main.qml
        RESOURCES resources.qrc
        QML_FILES MainWindow.qml
        QML_FILES SplashWindow.qml
        RESOURCES
        RESOURCES
        RESOURCES
)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
set_target_properties(appGallery PROPERTIES
#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.appGallery
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

target_link_libraries(appGallery
    PRIVATE Qt6::Quick
)

include(GNUInstallDirs)
install(TARGETS appGallery
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
